lang/tests/compile_fail/pod_vec_n_exceeds_pfx.stderr
error[E0080]: evaluation panicked: PodVec<T, N, PFX>: N exceeds the maximum value representable by the PFX-byte length prefix
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `quasar_lang::Vec::<u8, 300, 1>::_CAP_CHECK` failed here
  |
 ::: $WORKSPACE/pod/src/vec.rs
  |
  | /         assert!(
  | |             N <= max_n_for_pfx(PFX),
  | |             "PodVec<T, N, PFX>: N exceeds the maximum value representable by the PFX-byte length \
  | |              prefix"
  | |         );
  | |_________- in this macro invocation

note: erroneous constant encountered
 --> $WORKSPACE/pod/src/vec.rs
  |
  |         let _ = Self::_CAP_CHECK;
  |                 ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> tests/compile_fail/pod_vec_n_exceeds_pfx.rs:6:15
  |
6 | const _: () = PodVec::<u8, 300, 1>::VALID;
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
